--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Numeros Aleatorios</title>
+
+    <link rel="stylesheet" href="./src/css/index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Shantell+Sans:wght@300;400;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
     <main>
@@ -25,6 +30,7 @@
         </form>
         <p id="respuesta"></p>
     </main>
+    
     <footer>
         <a href="https://soyrandy708.github.io/" target="_blank">Mi Sitio Web</a>
     </footer>
