Estilos de CSS terminados

--- a/index.html
+++ b/index.html
@@ -18,21 +18,27 @@
         <form action="">
             <label for="">
                 Numero menor
-                <input type="number" name="numero-menor" id="numero-menor">
+                <input type="number" value="1" name="numero-menor" id="numero-menor">
             </label>
 
             <label for="">
                 Numero mayor
-                <input type="number" name="numero-mayor" id="numero-mayor">
+                <input type="number" value="10" name="numero-mayor" id="numero-mayor">
             </label>
 
-            <input type="button" value="Numero aleatorio" id="enviar">
+            <label for="">
+                Numero de resultados
+                <input type="number" value="1" name="numero-mayor" id="numero-mayor">
+            </label>
         </form>
-        <p id="respuesta"></p>
+        <input type="button" value="Generar numeros" id="enviar">
+        <p class="respuesta" id="respuesta">Numeros:</p>
     </main>
     
     <footer>
-        <a href="https://soyrandy708.github.io/" target="_blank">Mi Sitio Web</a>
+        <ul>
+            <li><a href="https://soyrandy708.github.io/" target="_blank">Mi Sitio Web</a></li>
+        </ul>
     </footer>
 </body>
 </html>
