--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Numeros Aleatorios</title>
 
+    <link rel="shortcut icon" href="https://res.cloudinary.com/dwog1xmvw/image/upload/v1677804472/ProyectosPersonales/NumerosAleatorios/number_jcxszl.svg" type="image/x-icon">
     <link rel="stylesheet" href="./src/css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -40,5 +41,7 @@
             <li><a href="https://soyrandy708.github.io/" target="_blank">Mi Sitio Web</a></li>
         </ul>
     </footer>
+
+    <script src="./src/js/index.js"></script>
 </body>
 </html>
