--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
             <label for="">
                 Numero de resultados
-                <input type="number" value="1" name="numero-mayor" id="numero-mayor">
+                <input type="number" value="1" name="numero-resultados" id="numero-resultados">
             </label>
         </form>
         <input type="button" value="Generar numeros" id="enviar">
