Cambio de favicon de la pagina

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Numeros Aleatorios</title>
 
-    <link rel="shortcut icon" href="https://res.cloudinary.com/dwog1xmvw/image/upload/v1677804472/ProyectosPersonales/NumerosAleatorios/number_jcxszl.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="https://res.cloudinary.com/dwog1xmvw/image/upload/v1677861560/ProyectosPersonales/NumerosAleatorios/dado_doft27.png" type="image/x-icon">
     <link rel="stylesheet" href="./src/css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
