--- a/index.html
+++ b/index.html
@@ -16,21 +16,28 @@
     <main>
         <h1>Generador de numeros aleatorios</h1>
         <p>Introduce los rangos entre los cuales se generara un numero aleatorio y la cantidad de numeros que quieres.</p>
-        <form action="">
-            <label for="">
+        <form>
+            <label for="numero-menor">
                 Numero menor
                 <input type="number" value="1" name="numero-menor" id="numero-menor">
             </label>
 
-            <label for="">
+            <label for="numero-mayor">
                 Numero mayor
                 <input type="number" value="10" name="numero-mayor" id="numero-mayor">
             </label>
 
-            <label for="">
+            <label for="numero-resultados">
                 Numero de resultados
                 <input type="number" value="1" name="numero-resultados" id="numero-resultados">
             </label>
+            
+            <div class="container-numeros-repetidos">
+                <label for="numeros-repetidos" class="numeros-repetidos desactivado">
+                    <input type="checkbox" id="numeros-repetidos">
+                    Permitir numeros repetidos
+                </label>
+            </div>
         </form>
         <input type="button" value="Generar numeros" id="enviar">
         <p class="respuesta" id="respuesta">Numeros:</p>
