--- a/index.html
+++ b/index.html
@@ -19,21 +19,21 @@
         <form>
             <label for="numero-menor">
                 Numero menor
-                <input type="number" value="1" name="numero-menor" id="numero-menor">
+                <input type="number" value="1" name="numeros-validacion" id="numero-menor">
             </label>
 
             <label for="numero-mayor">
                 Numero mayor
-                <input type="number" value="10" name="numero-mayor" id="numero-mayor">
+                <input type="number" value="10" name="numeros-validacion" id="numero-mayor">
             </label>
 
             <label for="numero-resultados">
                 Numero de resultados
-                <input type="number" value="1" name="numero-resultados" id="numero-resultados">
+                <input type="number" value="1" name="numeros-validacion" id="numero-resultados">
             </label>
             
-            <div class="container-numeros-repetidos">
-                <label for="numeros-repetidos" class="numeros-repetidos desactivado">
+            <div class="container-numeros-repetidos desactivado">
+                <label for="numeros-repetidos" class="numeros-repetidos">
                     <input type="checkbox" id="numeros-repetidos">
                     Permitir numeros repetidos
                 </label>
